## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.13 2002/11/27 02:07:41 dm Exp $

pkgdata_DATA = agentrc \
sfs_config sfscd_config sfssd_config sfsauthd_config sfs_srp_parms

EXTRA_DIST = .cvsignore sfs_srp_parms agentrc.in \
sfs_config.in sfscd_config.in sfssd_config.in sfsauthd_config.in \
sfscd.init sfssd.init

CLEANFILES = core *.core *~
DISTCLEANFILES = sfs_config sfscd_config sfssd_config sfsauthd_config
MAINTAINERCLEANFILES = Makefile.in
